--- a/src/app/components/advanced-routing-demo/advanced-routing-demo.component.html
+++ b/src/app/components/advanced-routing-demo/advanced-routing-demo.component.html
@@ -1,10 +1,9 @@
-<h2>Advanced Routing Demo</h2>
+<!-- <h2>Advanced Routing Demo</h2>
 
 <p *ngIf="loading">Loading lazy module…</p>
 
 <h3>Page Views</h3>
-<!-- <ul>
-  <li *ngFor="let view of pageViews">{{ view }}</li>
-</ul> -->
 
-<p>Navigate to Admin to see resolver + guards + lazy loading in action.</p>
+<p>Navigate to Admin to see resolver + guards + lazy loading in action.</p> -->
+
+<app-rxjs-advanced></app-rxjs-advanced>
